# pathrag

./: INSTALLATION.md  README.md  app.py  fix_graph.py  main.py  pathrag.db  pyproject.toml  start-api.bat  start-api.sh  start.bat  v1_test.py
PathRAG/: PathRAG.py  __init__.py  base.py  config.py  fix_disconnected_nodes.py  llm_langchain.py  operate.py  prompt.py  storage.py
api/auth/: jwt_handler.py  schemas.py
api/features/: rag_manager.py
api/features/documents/: routes.py
api/features/knowledge_graph/: routes.py
api/features/users/: schemas.py
ui/: package-lock.json
ui/src/components/documents/: DocumentList.js  DocumentUploader.js
ui/src/pages/: DocumentsPage.js
